force-app/main/default/objects/Budget_Center_Names_Numbers__c.object
<CustomObject>
    <description>Deprecated. Using Projects, Award IDs, and Financial Account Numbers instead.</description>
    <fields>
        <fullName>Budget_Center_Name__c</fullName>
        <label>Budget Center Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Center_Number__c</fullName>
        <label>Budget Center Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Center_Type__c</fullName>
        <label>Budget Center Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Center_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Center 1</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The cost center is either inactive or does not exist. Please contact your Finance or Operations manager for assistance.</errorMessage>
            <filterItems>
                <field>Budget_Center_Names_Numbers__c.Status__c</field>
                <operation>notContain</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Budget_Center_Names_Numbers__c</referenceTo>
        <relationshipName>Budget_Center_Names_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Center_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Center 2</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The cost center is inactive or does not exist. Please check with your Finance or Operations manager for assistance.</errorMessage>
            <filterItems>
                <field>Budget_Center_Names_Numbers__c.Status__c</field>
                <operation>notContain</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Budget_Center_Names_Numbers__c</referenceTo>
        <relationshipName>Budget_Center_Names_Numbers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Center_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Center 3</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The cost center is inactive or does not exist. Please see your Finance or Operations manager for assistance.</errorMessage>
            <filterItems>
                <field>Budget_Center_Names_Numbers__c.Status__c</field>
                <operation>notContain</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Budget_Center_Names_Numbers__c</referenceTo>
        <relationshipName>Budget_Center_Names_Numbers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Active or inactive status of cost center.</description>
        <inlineHelpText>Indicate whether the cost center is active or inactive.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Center_Name__c</fullName>
        <label>Sub Center Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Center_Number__c</fullName>
        <label>Sub Center Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>XDeprecated: Budget Center Name &amp; Number</label>
    <nameField>
        <label>Center Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Center Names &amp; Numbers</pluralLabel>
    <recordTypes>
        <fullName>Budget_Center_Names_Numbers</fullName>
        <active>true</active>
        <label>Budget Center Names &amp; Numbers</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>